--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,6 +2,11 @@
 # See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
+  comments: "comments"
+  planning: 
+    planning: "planning"
+    clear: "Clear planning"
+    go: "Go to my planning"
   diary:
     actions:
       delete: "Delete"
