--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,11 +2,29 @@
 # See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
+  activity:
+    verb:
+      like:
+        Guide:
+          title: "%{subject} likes %{activity_object}."
+          like: "I like too"
+          unlike: "I do not like anymore"
+    like_construction:
+      like_friends:
+        one: "%{friends} contact"
+        other: "%{friends} contacts"
+      like_and: " and "
+      like_people:
+        one: "%{people} person"
+        other: "%{people} people"
+      like_others:
+        one: "%{people} other"
+        other: "%{people} others"
+      like_final:
+        one: " likes this"
+        other: " like this"
+        you: "like this"
   comments: "comments"
-  planning: 
-    planning: "planning"
-    clear: "Clear planning"
-    go: "Go to my planning"
   diary:
     actions:
       delete: "Delete"
@@ -66,66 +84,6 @@ en:
     tabs:
       mine: "My diaries"
       friends: "Friends diaries"
-      recommended: "Recommended"
-  trip:
-    actions:
-      delete: "Delete"
-      details: "Details"
-      edit: "Edit"
-    all: "All trips"
-    confirm_delete: "Delete trip?"
-    details:
-      info: "Info"
-    form:
-      title: "Trip"
-    info:
-      author: "Author"
-      date:
-        created_at: "Created at"
-        updated_at: "Updated at"
-      description:
-        description: "Description"
-        update: "Update description"
-      file:
-        title: "Upload"
-      size: "Size"
-      tags: "Tags"
-      title:
-        title: "Title"
-    mine: "My trips"
-    name: "trip"
-    name_title: "Trip name"
-    phone_title: "Phone number"
-    photo:
-      button: "Upload"
-      update: "Upload photo"
-    url_title: "Website"
-    address:
-      street: "Address"
-      locality: "City"
-      region: "Region"
-      postalcode: "Postalcode"
-      country: "Country"
-    not_mine: "Trips"
-    one: "a trip"
-    simple_all: "All"
-    title: "Trips"
-    like:
-      me: "I like"
-      other: "%{contact} likes"
-    search:
-      name: "Search for your fav trips"
-      no_match: "Don't find your fav trip?"
-      new: "+ Add new trip"
-    comments:
-      contacts: "See only my contacts's comments"
-      all: "See all comments"
-    view:
-      list: "List view"
-      map: "Map view"
-    tabs:
-      mine: "My trips"
-      friends: "Friends trips"
       recommended: "Recommended"
   guide:
     actions:
@@ -187,6 +145,10 @@ en:
       mine: "My guides"
       friends: "Friends guides"
       recommended: "Recommended"
+  planning: 
+    planning: "planning"
+    clear: "Clear planning"
+    go: "Go to my planning"
   route:
     actions:
       delete: "Delete"
@@ -247,26 +209,65 @@ en:
       mine: "My routes"
       friends: "Friends routes"
       recommended: "Recommended"
-  activity:
-    verb:
-      like:
-        Guide:
-          title: "%{subject} likes %{activity_object}."
-          like: "I like too"
-          unlike: "I do not like anymore"
-    like_construction:
-      like_friends:
-        one: "%{friends} contact"
-        other: "%{friends} contacts"
-      like_and: " and "
-#      like_you: "you like this"
-      like_people:
-        one: "%{people} person"
-        other: "%{people} people"
-      like_others:
-        one: "%{people} other"
-        other: "%{people} others"
-      like_final:
-        one: " likes this"
-        other: " like this"
-        you: "like this"
+  site:
+    name: "Hello World"
+  trip:
+    actions:
+      delete: "Delete"
+      details: "Details"
+      edit: "Edit"
+    all: "All trips"
+    confirm_delete: "Delete trip?"
+    details:
+      info: "Info"
+    form:
+      title: "Trip"
+    info:
+      author: "Author"
+      date:
+        created_at: "Created at"
+        updated_at: "Updated at"
+      description:
+        description: "Description"
+        update: "Update description"
+      file:
+        title: "Upload"
+      size: "Size"
+      tags: "Tags"
+      title:
+        title: "Title"
+    mine: "My trips"
+    name: "trip"
+    name_title: "Trip name"
+    phone_title: "Phone number"
+    photo:
+      button: "Upload"
+      update: "Upload photo"
+    url_title: "Website"
+    address:
+      street: "Address"
+      locality: "City"
+      region: "Region"
+      postalcode: "Postalcode"
+      country: "Country"
+    not_mine: "Trips"
+    one: "a trip"
+    simple_all: "All"
+    title: "Trips"
+    like:
+      me: "I like"
+      other: "%{contact} likes"
+    search:
+      name: "Search for your fav trips"
+      no_match: "Don't find your fav trip?"
+      new: "+ Add new trip"
+    comments:
+      contacts: "See only my contacts's comments"
+      all: "See all comments"
+    view:
+      list: "List view"
+      map: "Map view"
+    tabs:
+      mine: "My trips"
+      friends: "Friends trips"
+      recommended: "Recommended"
