--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -2,17 +2,40 @@
 # See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 es:
-  trip:
+  activity:
+    verb:
+      like:
+        Place:
+          title: "A %{subject} le gusta %{activity_object}."
+          like: "También me gusta"
+          unlike: "Ya no me gusta"
+    like_construction:
+      like_friends:
+        one: "A %{friends} contacto"
+        other: "A %{friends} contactos"
+      like_and: " y "
+      like_people:
+        one: "a %{people} persona"
+        other: "a %{people} personas"
+      like_others:
+        one: "%{people} otro"
+        other: "%{people} otros"
+      like_final:
+        one: " le gusta esto"
+        other: " les gusta esto"
+        you: "le gusta esto"
+  comments: "comentarios"
+  diary:
     actions:
       delete: "Borrar"
       details: "Detalles"
       edit: "Editar"
-    all: "Todos los viajes"
-    confirm_delete: "¿Borrar viaje?"
+    all: "Todos los diarios"
+    confirm_delete: "¿Borrar diario?"
     details:
       info: "Info"
     form:
-      title: "Viaje"
+      title: "Diario"
     info:
       author: "Autor"
       date:
@@ -22,14 +45,14 @@ es:
         description: "Descripción"
         update: "Actualizar descripción"
       file:
-        title: "Cargar"
+        title: "Subir"
       size: "Tamaño"
       tags: "Etiquetas"
       title:
         title: "Título"
-    mine: "Mis viajes"
-    name: "viaje"
-    name_title: "Nombre del viaje"
+    mine: "Mis diarios"
+    name: "diario"
+    name_title: "Nombre del diario"
     phone_title: "Teléfono"
     photo:
       button: "Subir"
@@ -41,17 +64,17 @@ es:
       region: "Región"
       postalcode: "Código postal"
       country: "País"
-    not_mine: "Viajes"
-    one: "un viaje"
+    not_mine: "Diarios"
+    one: "un diario"
     simple_all: "Todos"
-    title: "Viajes"
+    title: "Diarios"
     like:
       me: "que me gustan"
       other: "que gustan a %{contact}"
     search:
-      name: "Busca tus viajes favoritos"
-      no_match: "¿No encuentras el viaje?"
-      new: "+ Añade un viaje nuevo"
+      name: "Busca tus diarios favoritos"
+      no_match: "¿No encuentras el diario?"
+      new: "+ Añade un diario nuevo"
     comments:
       contacts: "Ver sólo los comentarios de mis contactos"
       all: "Ver todos los comentarios"
@@ -59,7 +82,7 @@ es:
       list: "Lista"
       map: "Mapa"
     tabs:
-      mine: "Mis viajes"
+      mine: "Mis diarios"
       friends: "De amigos"
       recommended: "Recomendados"
   guide:
@@ -182,32 +205,63 @@ es:
       mine: "Mis rutas"
       friends: "De amigos"
       recommended: "Recomendados"
-  activity:
-    verb:
-      like:
-        Place:
-          title: "A %{subject} le gusta %{activity_object}."
-          like: "También me gusta"
-          unlike: "Ya no me gusta"
-    like_construction:
-      like_friends:
-        one: "A %{friends} contacto"
-        other: "A %{friends} contactos"
-      like_and: " y "
-#      like_you: "you like this"
-      like_people:
-        one: "a %{people} persona"
-        other: "a %{people} personas"
-      like_others:
-        one: "%{people} otro"
-        other: "%{people} otros"
-      like_final:
-        one: " le gusta esto"
-        other: " les gusta esto"
-        you: "le gusta esto"
-
-#  repository:
-#    order:
-#      by: "Order by"
-#      last_modified: "Last modified"
-#      most_popular: "Most popular"
+  trip:
+    actions:
+      delete: "Borrar"
+      details: "Detalles"
+      edit: "Editar"
+    all: "Todos los viajes"
+    confirm_delete: "¿Borrar viaje?"
+    details:
+      info: "Info"
+    form:
+      title: "Viaje"
+    info:
+      author: "Autor"
+      date:
+        created_at: "Creado el"
+        updated_at: "Actualizado el"
+      description:
+        description: "Descripción"
+        update: "Actualizar descripción"
+      file:
+        title: "Cargar"
+      size: "Tamaño"
+      tags: "Etiquetas"
+      title:
+        title: "Título"
+    mine: "Mis viajes"
+    name: "viaje"
+    name_title: "Nombre del viaje"
+    phone_title: "Teléfono"
+    photo:
+      button: "Subir"
+      update: "Subir foto"
+    url_title: "Website"
+    address:
+      street: "Dirección"
+      locality: "Ciudad"
+      region: "Región"
+      postalcode: "Código postal"
+      country: "País"
+    not_mine: "Viajes"
+    one: "un viaje"
+    simple_all: "Todos"
+    title: "Viajes"
+    like:
+      me: "que me gustan"
+      other: "que gustan a %{contact}"
+    search:
+      name: "Busca tus viajes favoritos"
+      no_match: "¿No encuentras el viaje?"
+      new: "+ Añade un viaje nuevo"
+    comments:
+      contacts: "Ver sólo los comentarios de mis contactos"
+      all: "Ver todos los comentarios"
+    view:
+      list: "Lista"
+      map: "Mapa"
+    tabs:
+      mine: "Mis viajes"
+      friends: "De amigos"
+      recommended: "Recomendados"
