Change site name

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -210,7 +210,7 @@ en:
       friends: "Friends routes"
       recommended: "Recommended"
   site:
-    name: "Hello World"
+    name: "Binakuru"
   trip:
     actions:
       delete: "Delete"
